--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^4.3.6",
     "chromedriver": "^103.0.0",
     "mocha": "^10.0.0",
+    "prettier": "^2.7.1",
     "selenium-webdriver": "^4.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
